# sfd

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: docs.yml
sfd-cli/: Cargo.toml
sfd-cli/src/: error.rs  main.rs
sfd-cli/src/cmd/: index.rs  mod.rs  sample_config.rs  search.rs
sfd-cli/src/view/table/: index.rs  mod.rs  print.rs  search.rs
sfd-core/: Cargo.toml
sfd-core/src/: client.rs  config.rs  context.rs  dirs.rs  error.rs  lib.rs  result.rs  run.rs  util.rs
sfd-core/src/config/: db.rs  error.rs  lang.rs  load.rs  mod.rs  ollama.rs  root.rs  scan.rs  spec.rs  vect.rs
sfd-core/src/context/: db.rs  extract.rs  mod.rs  scan.rs  vect.rs
sfd-core/src/db/: connect.rs  context.rs  error.rs  init.rs  mod.rs  schema.sql
sfd-core/src/error/: db.rs  extract.rs  file_extract.rs  mod.rs  scan.rs  vect.rs
sfd-core/src/extract/: comment.rs  config.rs  error.rs  extract_items.rs  extractor.rs  ident.rs  item.rs  mod.rs  source.rs  span.rs  state.rs  symbol.rs
sfd-core/src/logic/: extract.rs  guess_lang.rs  mod.rs  scan.rs
sfd-core/src/logic/db/: connect.rs  init.rs  load_extension.rs  mod.rs  schema.sql  search.rs  store.rs
sfd-core/src/logic/ollama/: embed.rs  ensure_ready.rs  mod.rs  ping.rs  prepare.rs  pull.rs
sfd-core/src/models/: comment.rs  embedding.rs  ident.rs  item.rs  lang_name.rs  location.rs  mod.rs  project_sources.rs  skip_reason.rs  source.rs  source_items.rs  span.rs
sfd-core/src/result/: index.rs  mod.rs  search.rs
sfd-core/src/scan/: context.rs  error.rs  mod.rs  scanner.rs
sfd-core/src/vect/: embed.rs  error.rs  mod.rs  ollama.rs  prepare.rs  state.rs
