[workspace]
resolver = "3"
members = ["./sfd-cli/", "./sfd-core/"]

[workspace.dependencies]
clap = "4"
derive_more = "2"
directories = "6"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
libsqlite3-sys = "0.30"
regex = "1"
reqwest = "0.12"
schematic = "0.19"
serde = "1"
sfd-core = { path = "sfd-core" }
sha2 = "0.10"
sqlite-vec = "0.1"
sqlx = "0.8"
thiserror = "2"
time = "0.3"
tokio = "1"
tree-sitter = "0.26"
url = "2.5.8"
wasmtime = "36"
