[package]
name = "sfd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
schematic = { version = "0.19", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
directories = "6"
url = { version = "2.5.8", features = ["serde"] }
tree-sitter = { version = "0.26", features = ["wasm"] }
derive_more = { version = "2", features = ["debug"] }
wasmtime = "36"
