[package]
name = "sfd-core"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
schematic = { workspace = true, features = ["yaml", "schema"] }
serde = { workspace = true, features = ["derive"] }
directories = { workspace = true }
url = { workspace = true, features = ["serde"] }
tree-sitter = { workspace = true, features = ["wasm"] }
derive_more = { workspace = true, features = ["debug"] }
globset = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sqlite-vec = { workspace = true }
libsqlite3-sys = { workspace = true }
time = { workspace = true, features = ["formatting"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
hex = { workspace = true }
sha2 = { workspace = true }
wasmtime = { workspace = true }
